# serialport-node-rs

./: .eslintrc.yml  Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  simple-test.ts
src/: lib.rs
