[package]
authors = ["s00d <Virus191288@gmail.com>"]
edition = "2021"
name = "serialport-node-buindings"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "2"
napi-derive = "2"
serialport = "4.0.1"
md5 = "0.7.0"
tokio = { version = "1.15.0", features = ["full"] }

[target.'cfg(all(any(windows, unix), target_arch = "x86_64", not(target_env = "musl")))'.dependencies]
mimalloc = {version = "0.1"}

[build-dependencies]
napi-build = "1"

[profile.release]
lto = true
